[gd_scene load_steps=3 format=3 uid="uid://dvwh354vtuk3t"]

[ext_resource type="Script" uid="uid://dbbkq56sjmba0" path="res://ui/map_ui.gd" id="1_raqrw"]

[sub_resource type="ButtonGroup" id="ButtonGroup_raqrw"]

[node name="MapUI" type="CanvasLayer"]
script = ExtResource("1_raqrw")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnBack" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "UI_BTN_BACK"

[node name="VSeparator" type="VSeparator" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="LblPath" type="Label" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "TYPE_WORLD > ..."

[node name="VSeparator2" type="VSeparator" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="BtnToolSelect" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_raqrw")
text = "UI_BTN_SELECT"

[node name="BtnToolPaint" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_raqrw")
text = "UI_BTN_PAINT"

[node name="OptionTerrain" type="OptionButton" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="BtnRiverMode" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "UI_BTN_RIVER"

[node name="BtnCreateRegion" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
disabled = true
text = "UI_BTN_CREATE"

[node name="BtnMoveTo" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
disabled = true
text = "UI_BTN_MOVETO"

[node name="OptionViewMode" type="OptionButton" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="BtnGenerate" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "UI_BTN_GEN"

[node name="MoveDialog" type="ConfirmationDialog" parent="."]

[node name="OptionTargetRegion" type="OptionButton" parent="MoveDialog"]
offset_right = 32.0
offset_bottom = 20.0
